1. Added dialog for new service centers

--- a/app/src/main/res/layout/activity_all_service_centers.xml
+++ b/app/src/main/res/layout/activity_all_service_centers.xml
@@ -43,6 +43,7 @@
                     android:textSize="15.5sp" />
 
                 <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/toolbar_new_iv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
