--- a/app/src/main/res/layout/item_checkup_fragment.xml
+++ b/app/src/main/res/layout/item_checkup_fragment.xml
@@ -5,8 +5,8 @@
     <data>
 
         <variable
-            name="productinforesponse"
-            type="com.incon.service.apimodel.components.productinforesponse.ProductInfoResponse" />
+            name="fetchNewRequestResponse"
+            type="com.incon.service.apimodel.components.fetchnewrequest.FetchNewRequestResponse" />
     </data>
 
     <RelativeLayout
