--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,7 +48,7 @@
     <color name="pale_grey">#f4f7f9</color>
     <color name="pale_grey_2">#afafaf</color>
     <color name="pale_grey_3">#ffcecdcd</color>
-
+    <color name="mercury">#E6E6E6</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="astral">#2E78A8</color>
