--- a/app/src/main/res/layout/item_all_service_centers.xml
+++ b/app/src/main/res/layout/item_all_service_centers.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="modelResponse"
-            type="com.incon.service.apimodel.components.servicecenterresponse.ServiceCenterResponse" />
+            type="com.incon.service.apimodel.components.servicecenter.ServiceCenterResponse" />
     </data>
 
     <RelativeLayout
