--- a/app/src/main/res/drawable/ic_placeholder.xml
+++ b/app/src/main/res/drawable/ic_placeholder.xml
@@ -1,6 +1,45 @@
-<vector android:height="24dp" android:viewportHeight="486.463"
-    android:viewportWidth="486.463" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M243.2,333.4c-13.6,0 -25,11.4 -25,25s11.4,25 25,25c13.1,0 25,-11.4 24.4,-24.4C268.2,344.7 256.9,333.4 243.2,333.4z"/>
-    <path android:fillColor="#FF000000" android:pathData="M474.6,422c15.7,-27.1 15.8,-59.4 0.2,-86.4l-156.6,-271.2c-15.5,-27.3 -43.5,-43.5 -74.9,-43.5s-59.4,16.3 -74.9,43.4l-156.8,271.5c-15.6,27.3 -15.5,59.8 0.3,86.9c15.6,26.8 43.5,42.9 74.7,42.9h312.8C430.7,465.6 458.8,449.3 474.6,422zM440.6,402.4c-8.7,15 -24.1,23.9 -41.3,23.9h-312.8c-17,0 -32.3,-8.7 -40.8,-23.4c-8.6,-14.9 -8.7,-32.7 -0.1,-47.7l156.8,-271.4c8.5,-14.9 23.7,-23.7 40.9,-23.7c17.1,0 32.4,8.9 40.9,23.8l156.7,271.4C449.3,369.9 449.2,387.5 440.6,402.4z"/>
-    <path android:fillColor="#FF000000" android:pathData="M237,157.9c-11.9,3.4 -19.3,14.2 -19.3,27.3c0.6,7.9 1.1,15.9 1.7,23.8c1.7,30.1 3.4,59.6 5.1,89.7c0.6,10.2 8.5,17.6 18.7,17.6c10.2,0 18.2,-7.9 18.7,-18.2c0,-6.2 0,-11.9 0.6,-18.2c1.1,-19.3 2.3,-38.6 3.4,-57.9c0.6,-12.5 1.7,-25 2.3,-37.5c0,-4.5 -0.6,-8.5 -2.3,-12.5C260.8,160.8 248.9,155.1 237,157.9z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="54dp"
+        android:height="42dp"
+        android:viewportWidth="54.4"
+        android:viewportHeight="42.5">
+    <path
+        android:pathData="M26.8,10.7c0,-1 0.8,-1.8 1.8,-1.8v0H12.7c-1.1,0 -2,0.9 -2,2v20.8c0,1.1 0.9,2 2,2h11.1c1,0 1.8,-0.8 1.8,-1.8v0c0,-1 -0.8,-1.8 -1.8,-1.8h-7.6c-0.9,0 -1.6,-0.7 -1.6,-1.6V14.1c0,-0.9 0.7,-1.6 1.6,-1.6h12.5v0C27.6,12.5 26.8,11.7 26.8,10.7z"
+        android:fillColor="#CCCCCC"/>
+    <path
+        android:pathData="M27.6,31.8c0,1 -0.8,1.8 -1.8,1.8v0h15.9c1.1,0 2,-0.9 2,-2V10.8c0,-1.1 -0.9,-2 -2,-2H30.7c-1,0 -1.8,0.8 -1.8,1.8v0c0,1 0.8,1.8 1.8,1.8h7.6c0.9,0 1.6,0.7 1.6,1.6v14.3c0,0.9 -0.7,1.6 -1.6,1.6H25.8v0C26.8,30 27.6,30.8 27.6,31.8z"
+        android:fillColor="#CCCCCC"/>
+    <path
+        android:pathData="M17.9,20.1c0.1,0 0.1,0 0.2,0.1c0,0 0.1,0.1 0.1,0.2v1.3h1.6c0.1,0 0.1,0 0.2,0.1c0,0 0.1,0.1 0.1,0.2c0,0.1 0,0.1 -0.1,0.2c0,0 -0.1,0.1 -0.2,0.1h-1.9c-0.2,0 -0.2,-0.1 -0.2,-0.2v-1.5c0,-0.1 0,-0.1 0.1,-0.2C17.7,20.2 17.8,20.1 17.9,20.1z"
+        android:fillColor="#CCCCCC"/>
+    <path
+        android:pathData="M22.5,21.9c0,0.2 -0.1,0.2 -0.2,0.2h-1.9c-0.2,0 -0.2,-0.1 -0.2,-0.2v-1.5c0,-0.2 0.1,-0.2 0.2,-0.2h1.9c0.2,0 0.2,0.1 0.2,0.2V21.9zM22,21.7v-1h-1.4v1H22z"
+        android:fillColor="#CCCCCC"/>
+    <path
+        android:pathData="M23,22.2c-0.1,0 -0.1,0 -0.2,-0.1c0,0 -0.1,-0.1 -0.1,-0.2c0,0 0,-0.1 0,-0.1l0.9,-1.5c0,-0.1 0.1,-0.1 0.1,-0.1c0,0 0.1,-0.1 0.2,-0.1c0.1,0 0.1,0 0.2,0.1c0,0 0.1,0.1 0.1,0.1l0.9,1.5c0,0 0,0 0,0.1c0,0 0,0 0,0.1c0,0.1 0,0.1 -0.1,0.2c-0.1,0 -0.1,0.1 -0.2,0.1c0,0 -0.1,0 -0.1,0c0,0 -0.1,0 -0.1,-0.1l-0.3,-0.4h-1l-0.3,0.4C23.1,22.1 23.1,22.2 23,22.2zM23.9,20.8l-0.3,0.4h0.5L23.9,20.8z"
+        android:fillColor="#CCCCCC"/>
+    <path
+        android:pathData="M27.7,21.9c0,0.2 -0.1,0.2 -0.2,0.2h-2.1v-2h0.5c0.3,0 0.5,0 0.7,0.1c0.2,0.1 0.4,0.2 0.6,0.4c0.2,0.2 0.3,0.3 0.4,0.6C27.7,21.4 27.7,21.7 27.7,21.9zM27.2,21.7c0,-0.1 -0.1,-0.3 -0.1,-0.4C27,21.2 26.9,21 26.8,21c-0.1,-0.1 -0.2,-0.2 -0.4,-0.2c-0.1,-0.1 -0.3,-0.1 -0.4,-0.1h-0.2v1H27.2z"
+        android:fillColor="#CCCCCC"/>
+    <path
+        android:pathData="M28.2,22.2c-0.1,0 -0.1,0 -0.2,-0.1c0,0 -0.1,-0.1 -0.1,-0.2v-1.6c0,-0.1 0,-0.1 0.1,-0.2c0,0 0.1,-0.1 0.2,-0.1c0.1,0 0.1,0 0.2,0.1c0,0 0.1,0.1 0.1,0.2v1.6c0,0.1 0,0.1 -0.1,0.2C28.3,22.2 28.3,22.2 28.2,22.2z"
+        android:fillColor="#CCCCCC"/>
+    <path
+        android:pathData="M30.7,21.5v-1.1c0,-0.1 0,-0.1 0.1,-0.2c0,0 0.1,-0.1 0.2,-0.1c0.1,0 0.1,0 0.2,0.1c0,0 0.1,0.1 0.1,0.2v1.5c0,0.1 0,0.2 -0.1,0.2c-0.1,0 -0.1,0.1 -0.2,0.1c0,0 -0.1,0 -0.1,0c0,0 -0.1,0 -0.1,0l-1.5,-1.3v1.1c0,0.1 0,0.1 -0.1,0.2c0,0 -0.1,0.1 -0.2,0.1c-0.1,0 -0.1,0 -0.2,-0.1c0,0 -0.1,-0.1 -0.1,-0.2v-1.6c0,-0.1 0,-0.1 0.1,-0.2c0,0 0.1,-0.1 0.1,-0.1c0,0 0.1,0 0.1,0c0,0 0.1,0 0.1,0.1L30.7,21.5z"
+        android:fillColor="#CCCCCC"/>
+    <path
+        android:pathData="M33.9,21.9c0,0.2 -0.1,0.2 -0.2,0.2h-1.9c-0.2,0 -0.2,-0.1 -0.2,-0.2v-1.5c0,-0.2 0.1,-0.2 0.2,-0.2h1.9c0.1,0 0.1,0 0.2,0.1c0,0 0.1,0.1 0.1,0.2c0,0.1 0,0.1 -0.1,0.2c0,0 -0.1,0.1 -0.2,0.1H32v1h1.4v-0.3h-0.7c-0.1,0 -0.1,0 -0.2,-0.1c0,0 -0.1,-0.1 -0.1,-0.2c0,-0.1 0,-0.1 0.1,-0.2c0,0 0.1,-0.1 0.2,-0.1h1.2V21.9z"
+        android:fillColor="#CCCCCC"/>
+    <path
+        android:pathData="M34.6,22.1c0,0.1 0,0.1 -0.1,0.2c0,0 -0.1,0.1 -0.2,0.1c-0.1,0 -0.1,0 -0.2,-0.1c0,0 -0.1,-0.1 -0.1,-0.2s0,-0.1 0.1,-0.2c0,0 0.1,-0.1 0.2,-0.1c0.1,0 0.1,0 0.2,0.1C34.6,22 34.6,22 34.6,22.1z"
+        android:fillColor="#CCCCCC"/>
+    <path
+        android:pathData="M35.4,22.1c0,0.1 0,0.1 -0.1,0.2c0,0 -0.1,0.1 -0.2,0.1s-0.1,0 -0.2,-0.1c0,0 -0.1,-0.1 -0.1,-0.2s0,-0.1 0.1,-0.2c0,0 0.1,-0.1 0.2,-0.1s0.1,0 0.2,0.1C35.3,22 35.4,22 35.4,22.1z"
+        android:fillColor="#CCCCCC"/>
+    <path
+        android:pathData="M36.1,22.1c0,0.1 0,0.1 -0.1,0.2c0,0 -0.1,0.1 -0.2,0.1c-0.1,0 -0.1,0 -0.2,-0.1c0,0 -0.1,-0.1 -0.1,-0.2s0,-0.1 0.1,-0.2c0,0 0.1,-0.1 0.2,-0.1c0.1,0 0.1,0 0.2,0.1C36.1,22 36.1,22 36.1,22.1z"
+        android:fillColor="#CCCCCC"/>
+    <path
+        android:pathData="M36.8,22.1c0,0.1 0,0.1 -0.1,0.2c0,0 -0.1,0.1 -0.2,0.1c-0.1,0 -0.1,0 -0.2,-0.1c0,0 -0.1,-0.1 -0.1,-0.2s0,-0.1 0.1,-0.2c0,0 0.1,-0.1 0.2,-0.1c0.1,0 0.1,0 0.2,0.1C36.8,22 36.8,22 36.8,22.1z"
+        android:fillColor="#CCCCCC"/>
 </vector>
