--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -17,7 +17,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/request_textview"
+                    android:id="@+id/payment_textview"
                     style="@style/BothMatch"
                     android:gravity="center"
                     android:text="No ReturnItems"
@@ -25,7 +25,7 @@
                     />
 
                 <android.support.v7.widget.RecyclerView
-                    android:id="@+id/request_recyclerview"
+                    android:id="@+id/payment_recyclerview"
                     style="@style/MatchWrap"
                     android:layout_marginTop="@dimen/margin_10"
                     android:fadeScrollbars="false"
