--- a/app/src/main/res/layout/fragment_repair.xml
+++ b/app/src/main/res/layout/fragment_repair.xml
@@ -17,7 +17,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/request_textview"
+                    android:id="@+id/repair_textview"
                     style="@style/BothMatch"
                     android:gravity="center"
                     android:text="No ReturnItems"
