--- a/app/src/main/res/layout/item_new_request_fragment.xml
+++ b/app/src/main/res/layout/item_new_request_fragment.xml
@@ -30,7 +30,7 @@
                 android:layout_height="32dp"
                 android:layout_marginLeft="@dimen/margin_10"
                 android:alpha="70"
-                android:src="@drawable/ic_user_favorite"
+                app:srcCompat="@drawable/ic_placeholder"
                 />
             <!--product image-->
             <ImageView
@@ -38,7 +38,7 @@
                 style="@style/image_product_icon"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/brand_imageview"
-                android:src="@drawable/ic_user_favorite"/>
+                app:srcCompat="@drawable/ic_placeholder"/>
             <!--product name-->
             <TextView
                 android:id="@+id/product_name"
