--- a/app/src/main/res/layout/item_payment_fragment.xml
+++ b/app/src/main/res/layout/item_payment_fragment.xml
@@ -27,14 +27,14 @@
                 android:layout_height="32dp"
                 android:layout_marginLeft="@dimen/margin_10"
                 android:alpha="70"
-                android:src="@drawable/ic_user_favorite" />
+                app:srcCompat="@drawable/ic_placeholder"/>
             <!--product image-->
             <ImageView
                 android:id="@+id/product_imageview"
                 style="@style/image_product_icon"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/brand_imageview"
-                android:src="@drawable/ic_user_favorite" />
+                app:srcCompat="@drawable/ic_placeholder" />
             <!--product name-->
             <TextView
                 android:id="@+id/product_name"
