--- a/app/src/main/res/layout/fragment_status_tab.xml
+++ b/app/src/main/res/layout/fragment_status_tab.xml
@@ -29,7 +29,19 @@
                         android:layout_below="@+id/appbar"
                         app:layout_collapseMode="parallax">
 
+                        <!-- spinner -->
+                        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
+                            android:id="@+id/spinner_service"
+                            style="@style/spinnerItemStyle"
+                            android:layout_marginTop="@dimen/margin_10"
+                            android:focusable="true"
+                            app:errorEnabled="true"
+                            app:met_floatingLabel="highlight"
+                            app:met_textColor="@color/colorForgotPasswordHintText"
+                            app:met_textColorHint="@color/colorForgotPasswordHintText"/>
+
                         <android.support.design.widget.TabLayout
+                            android:layout_below="@+id/spinner_service"
                             android:id="@+id/tab_layout"
                             style="@style/MatchWrap"
                             android:layout_gravity="fill"
@@ -42,10 +54,7 @@
                             app:tabMode="scrollable"
                             app:tabGravity="fill"
                             app:tabSelectedTextColor="@color/white"
-                            app:tabTextColor="@color/white"
-
-                            />
-
+                            app:tabTextColor="@color/white" />
 
                     </RelativeLayout>
 
