--- a/app/src/main/res/layout/fragment_status_tab.xml
+++ b/app/src/main/res/layout/fragment_status_tab.xml
@@ -1,5 +1,5 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -8,8 +8,7 @@
 
         <android.support.design.widget.CoordinatorLayout
             android:id="@+id/main_container"
-            style="@style/MatchWrap"
-            >
+            style="@style/MatchWrap">
 
             <android.support.design.widget.AppBarLayout
                 android:id="@+id/appbar"
@@ -30,7 +29,7 @@
                         app:layout_collapseMode="parallax">
 
                         <!-- spinner -->
-                        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
+                        <!--<com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                             android:id="@+id/spinner_service"
                             style="@style/spinnerItemStyle"
                             android:layout_marginTop="@dimen/margin_10"
@@ -38,21 +37,20 @@
                             app:errorEnabled="true"
                             app:met_floatingLabel="highlight"
                             app:met_textColor="@color/colorForgotPasswordHintText"
-                            app:met_textColorHint="@color/colorForgotPasswordHintText"/>
+                            app:met_textColorHint="@color/colorForgotPasswordHintText" />-->
 
                         <android.support.design.widget.TabLayout
-                            android:layout_below="@+id/spinner_service"
                             android:id="@+id/tab_layout"
                             style="@style/MatchWrap"
                             android:layout_gravity="fill"
                             android:background="@color/colorPrimaryDark"
                             android:fillViewport="true"
                             android:minHeight="?attr/actionBarSize"
-                            app:tabIndicatorHeight="@dimen/margin_5"
                             android:theme="@style/AppTheme"
-                            app:tabIndicatorColor="@color/white"
-                            app:tabMode="scrollable"
                             app:tabGravity="fill"
+                            app:tabIndicatorColor="@color/white"
+                            app:tabIndicatorHeight="@dimen/margin_5"
+                            app:tabMode="scrollable"
                             app:tabSelectedTextColor="@color/white"
                             app:tabTextColor="@color/white" />
 
