--- a/app/src/main/res/layout/activity_adduser.xml
+++ b/app/src/main/res/layout/activity_adduser.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
             name="addUser"
-            type="com.incon.service.dto.adduser.AddUser"/>
+            type="com.incon.service.dto.adduser.AddUser" />
 
         <variable
             name="addUserActivity"
-            type="com.incon.service.ui.adduser.AddUserActivity"/>
+            type="com.incon.service.ui.adduser.AddUserActivity" />
     </data>
 
     <RelativeLayout style="@style/BothMatch">
@@ -26,8 +26,7 @@
 
             <RelativeLayout
                 style="@style/BothMatch"
-                android:paddingBottom="@dimen/margin_38"
-                >
+                android:paddingBottom="@dimen/margin_38">
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
@@ -46,7 +45,7 @@
                             android:paddingEnd="@dimen/margin_25"
                             android:paddingStart="@dimen/margin_15"
                             android:visibility="visible"
-                            app:srcCompat="@drawable/ic_back_arrow"/>
+                            app:srcCompat="@drawable/ic_back_arrow" />
 
                         <TextView
                             android:id="@+id/toolbar_text_user"
@@ -55,7 +54,7 @@
                             android:layout_centerInParent="true"
                             android:text="@string/action_add_user"
                             android:textColor="@color/white"
-                            android:textSize="15.5sp"/>
+                            android:textSize="15.5sp" />
 
 
                     </RelativeLayout>
@@ -83,7 +82,7 @@
                         android:maxLength="@integer/character_limit_200"
                         android:maxLines="1"
                         android:tag="0"
-                        android:text="@={addUser.name}"/>
+                        android:text="@={addUser.name}" />
 
                 </com.incon.service.custom.view.CustomTextInputLayout>
 
@@ -101,10 +100,10 @@
                         android:id="@+id/edittext_number"
                         style="@style/Register_TextInputEditText"
                         android:focusable="true"
-                        android:inputType="number"
                         android:imeOptions="actionNext"
+                        android:inputType="number"
                         android:tag="1"
-                        android:text="@={addUser.mobileNumber}"/>
+                        android:text="@={addUser.mobileNumber}" />
 
                 </com.incon.service.custom.view.CustomTextInputLayout>
 
@@ -121,7 +120,7 @@
                     app:errorEnabled="true"
                     app:met_floatingLabel="highlight"
                     app:met_textColor="@color/colorForgotPasswordHintText"
-                    app:met_textColorHint="@color/colorForgotPasswordHintText"/>
+                    app:met_textColorHint="@color/colorForgotPasswordHintText" />
 
                 <!-- Date of Birth -->
                 <com.incon.service.custom.view.CustomTextInputLayout
@@ -138,8 +137,7 @@
                         style="@style/Register_TextInputEditText"
                         android:enabled="false"
                         android:tag="3"
-                        android:text="@={addUser.dateOfBirthToShow}"
-                        />
+                        android:text="@={addUser.dateOfBirthToShow}" />
                 </com.incon.service.custom.view.CustomTextInputLayout>
 
                 <!--dummy view for dob click event -->
@@ -152,7 +150,7 @@
                     android:layout_alignStart="@+id/input_layout_register_dob"
                     android:layout_alignTop="@+id/input_layout_register_dob"
                     android:background="@null"
-                    android:onClick="@{() -> addUserActivity.onDobClick()}"/>
+                    android:onClick="@{() -> addUserActivity.onDobClick()}" />
 
 
                 <!-- Email ID -->
@@ -174,7 +172,7 @@
                         android:maxLength="@integer/character_limit_200"
                         android:maxLines="1"
                         android:tag="4"
-                        android:text="@={addUser.email}"/>
+                        android:text="@={addUser.email}" />
                 </com.incon.service.custom.view.CustomTextInputLayout>
 
 
@@ -198,7 +196,7 @@
                         android:maxLength="@integer/character_limit_200"
                         android:maxLines="1"
                         android:tag="5"
-                        android:text="@={addUser.password}"/>
+                        android:text="@={addUser.password}" />
                 </com.incon.service.custom.view.CustomTextInputLayout>
 
                 <!-- confirm Password -->
@@ -221,7 +219,7 @@
                         android:maxLength="@integer/character_limit_200"
                         android:maxLines="1"
                         android:tag="6"
-                        android:text="@={addUser.confirmPassword}"/>
+                        android:text="@={addUser.confirmPassword}" />
                 </com.incon.service.custom.view.CustomTextInputLayout>
 
                 <!-- Address -->
@@ -239,7 +237,7 @@
                         style="@style/Register_TextInputEditText"
                         android:enabled="false"
                         android:tag="7"
-                        android:text="@={addUser.address}"/>
+                        android:text="@={addUser.address}" />
                 </com.incon.service.custom.view.CustomTextInputLayout>
 
                 <!--Dummy view used for click action-->
@@ -252,7 +250,7 @@
                     android:layout_alignStart="@+id/input_layout_register_address"
                     android:layout_alignTop="@+id/input_layout_register_address"
                     android:background="@null"
-                    android:onClick="@{() -> addUserActivity.onAddressClick()}"/>
+                    android:onClick="@{() -> addUserActivity.onAddressClick()}" />
 
 
                 <!-- service_center-->
@@ -268,7 +266,7 @@
                     android:visibility="visible"
                     app:met_floatingLabel="highlight"
                     app:met_textColor="@color/colorForgotPasswordHintText"
-                    app:met_textColorHint="@color/colorForgotPasswordHintText"/>
+                    app:met_textColorHint="@color/colorForgotPasswordHintText" />
 
 
                 <!-- service_center_designation-->
@@ -284,7 +282,7 @@
                     android:visibility="visible"
                     app:met_floatingLabel="highlight"
                     app:met_textColor="@color/colorForgotPasswordHintText"
-                    app:met_textColorHint="@color/colorForgotPasswordHintText"/>
+                    app:met_textColorHint="@color/colorForgotPasswordHintText" />
 
 
                 <Button
@@ -300,7 +298,7 @@
                     android:text="@string/add_new_submit"
                     android:textAllCaps="true"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="@dimen/text_size_13"/>
+                    android:textSize="@dimen/text_size_13" />
 
 
             </RelativeLayout>
